// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly for player 1 with 5 points 1`] = `
<Text
  style={
    [
      {
        "fontSize": 48,
        "fontWeight": "bold",
        "position": "absolute",
      },
      {
        "bottom": "65%",
        "color": "#4C9D00",
        "left": 32,
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      },
    ]
  }
  testID="turn-score-1"
>
  5
</Text>
`;

exports[`renders correctly for player 2 with 42 points 1`] = `
<Text
  style={
    [
      {
        "fontSize": 48,
        "fontWeight": "bold",
        "position": "absolute",
      },
      {
        "color": "#0073E6",
        "right": 32,
        "top": "65%",
      },
    ]
  }
  testID="turn-score-2"
>
  42
</Text>
`;
